--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
   </div>
 
+
   <header class="main-header">
     <div class="container">
       <div class="logo-container">
@@ -43,6 +44,10 @@
         </div>
       </div>
       
+      <button class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </button>
+
       <nav class="main-nav">
         <ul>
           <li><a href="#" class="active">INICIO</a></li>
@@ -135,7 +140,7 @@
     </section>
   </main>
 
-  <footer>
+ <footer>
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
@@ -155,11 +160,11 @@
           <h4>Contacto</h4>
           <p><i class="fas fa-map-marker-alt"></i> Av. Tupac Amaru Nro. 060 P.J. Manco Inca (Alt.Km.7.5 D Av.T.Amaru-Paradero 50)</p>
           <p><i class="fas fa-phone"></i> +51 997 052 649</p>
-          <p><i class="fas fa-envelope"></i>emaduya@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> emaduya@gmail.com</p>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 EMADUYA ROÑES EIRL. Todos los derechos reservados.</p>
+        <p>&copy; 2023 EMADUYA ROÑES EIRL. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
@@ -167,4 +172,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
