--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://www.facebook.com/revestmicrocemento/?locale=es_LA" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
         <a href="https://www.instagram.com/emaduya/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/company/emaduyaro%C3%B1eseirl/?originalSubdomain=pe " target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/company/emaduyaro%C3%B1eseirl/?originalSubdomain=pe" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://w.app/uzfwkl" target="_blank"><i class="fab fa-whatsapp"></i></a>
       </div>
       <div class="utilities">
@@ -30,7 +30,6 @@
       </div>
     </div>
   </div>
-
 
   <header class="main-header">
     <div class="container">
@@ -48,11 +47,11 @@
         <i class="fas fa-bars"></i>
       </button>
 
-      <nav class="main-nav">
+      <nav class="main-nav" id="main-nav">
         <ul>
           <li><a href="#" class="active">INICIO</a></li>
           <li class="dropdown">
-            <a href="#">NUESTROS TRABAJOS</a>
+            <a href="#">NUESTROS TRABAJOS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
               <li><a href="#">Microcemento Clasico</a></li>
               <li><a href="#">Microcemento Oxido</a></li>
@@ -62,7 +61,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#">PRODUCTOS</a>
+            <a href="#">PRODUCTOS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
               <li><a href="#">Grout</a></li>
               <li><a href="#">Microcemento</a></li>
@@ -72,7 +71,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#">SERVICIOS</a>
+            <a href="#">SERVICIOS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
               <li><a href="#">Revestimientos Decorativos</a></li>
               <li><a href="#">Carpinteria y Ebanisteria</a></li>
@@ -172,5 +171,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
